@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: correctly display artifacts that can be made via alchemy.
+Nicolas Weeger 2010-08-01
+
 Fix lighter message containing 'NULL'.
 Nicolas Weeger 2010-08-01
 
